<resources>
    <string name="app_name">Virtuosity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="exercises">Exercises</string>
    <string name="practice">Practice</string>
    <string name="settings">Settings</string>
    <string name="new_exercise">New exercise</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="exercises_search_hint">Search exercises</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="delete_history_dialog_title">Delete record?</string>
    <string name="delete_exercise_dialog_title">Delete exercise?</string>
    <string name="delete_routine_dialog_title">Delete routine?</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="editorTitleEdit">Edit Routine</string>
    <string name="editorTitleNew">New Routine</string>
    <string name="empty_name_error_msg">Name cannot be empty</string>
    <string name="nameInputHint">Name</string>
    <string name="add_an_exercise">Add an exercise</string>
    <string name="edit">Edit</string>
    <string name="start">Start</string>
    <string name="bpm" translatable="false">BPM</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="start_timer">Start timer</string>
    <string name="pause_timer">Pause timer</string>
    <string name="restart_timer">Restart timer</string>
    <string name="timer_notification_channel_name">Timer</string>
    <string name="metronome_notification_channel_name">Metronome</string>
    <string name="timer_notification_channel_id" translatable="false">timer_channel</string>
    <string name="metronome_notification_channel_id" translatable="false">metronome_channel</string>
    <string name="clear_session_dialog_title">Clear the saved session?</string>
    <string name="resume_session_title">Resume session</string>
    <string name="resume">Resume</string>
    <string name="history">History</string>
    <string name="dialog_positive_button_label">OK</string>
    <string name="dialog_negative_button_label">Cancel</string>
    <string name="pref_timer_vibrate_title">Vibrate on complete</string>
    <string name="pref_timer_title">Timer</string>
    <string name="timer_notification_stopped_message">Practice in session</string>
    <string name="timer_notification_time_up_message">Time\'s up!</string>
    <string name="timer_notification_time_remaining_prefix">Time remaining:</string>
    <string name="no_exercise_history_data_message">No data for this period</string>
    <string name="drag_handle_description">Drag handle</string>
    <string name="history_stats_average_message">Average: %d BPM</string>
    <string name="history_stats_slowest_message">Slowest: %d BPM</string>
    <string name="history_stats_fastest_message">Fastest: %d BPM</string>
    <string name="history_stats_progress_message">Progress: +%d BPM</string>
    <string name="history_stats_progress_negative_message">Progress: %d BPM</string>
    <string name="timer_editor_hint">Timer duration</string>
    <string name="session_summary_title">Summary</string>
    <string-array name="history_range_array">
        <item>7 days</item>
        <item>30 days</item>
        <item>90 days</item>
        <item>Year</item>
        <item>All</item>
    </string-array>
    <string name="empty_routine_dialog_title">No exercises found</string>
    <string name="empty_routine_dialog_message">This routine does not contain any exercises. You can add exercises by tapping the \'Edit\' button in the main menu.</string>
    <string name="stats_card_title">Stats for period</string>
    <string name="no_exercises_message">No exercises found.\nTap the \'+\' button to create one!</string>
    <string name="no_routines_message">No routines found.\nTap the \'+\' button to create one!</string>
    <string name="cancel">Cancel</string>
    <string name="routines">Routines</string>
    <string name="session_menu_finish_text">FINISH</string>
    <string name="session_finish_dialog_title">Are you finished?</string>
    <string name="routine_editor_exercise_header">Exercise</string>
    <string name="routine_editor_duration_header">Duration</string>
    <string name="no_history_message">No records found.\n Tap the \'Practice\' tab at the bottom to begin!</string>
    <string name="routine_editor_exercise_removed_message">Exercise removed</string>
    <string name="undo">Undo</string>
    <string name="routine_deleted_message">Routine deleted</string>
    <string name="message_action_cannot_be_undone">This action cannot be undone.</string>
    <string name="clear_session_dialog_message">Any unsaved progress will be lost.</string>
    <string name="clear">Clear</string>
    <string name="session_finish_dialog_message">Exercises with 0 or empty BPM will be discarded.</string>
    <string name="new_routine_button_description">New Routine</string>
    <string name="history_deleted_message">Record deleted</string>
    <string name="exercise_deleted_message">Exercise deleted</string>
    <string name="discard_changes_dialog_title">Discard changes?</string>
    <string name="discard_changes_dialog_message">Any unsaved changes will be lost.</string>
    <string name="discard">Discard</string>

</resources>