<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/sessionToolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            tools:title="Routine Name">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/session_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/exercise_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/session_current_exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Exercise Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="10:12" />

            <EditText
                android:id="@+id/timer_editor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/timer_editor_hint"
                android:importantForAutofill="no"
                android:inputType="none"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="?android:attr/textColorSecondary"
                android:visibility="gone"
                tools:text="10:12"
                tools:visibility="visible" />

            <ImageButton
                android:id="@+id/start_timer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/start_timer"
                android:src="@drawable/ic_baseline_play_arrow_24" />

            <ImageButton
                android:id="@+id/pause_timer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pause_timer"
                android:src="@drawable/ic_baseline_pause_24"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/restart_timer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/restart_timer"
                android:src="@drawable/ic_baseline_replay_24" />

        </LinearLayout>

        <EditText
            android:id="@+id/bpm_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/bpm"
            android:digits="0123456789"
            android:hint="@string/bpm"
            android:inputType="numberDecimal"
            android:maxLength="3"
            tools:text="120" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/timer_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:visibility="gone" />

    <Button
        android:id="@+id/next_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:visibility="gone" />

    <Button
        android:id="@+id/previous_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <LinearLayout
        android:id="@+id/summary_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_summary_title"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?android:attr/textColorSecondary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/summary_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="0dp"
            android:paddingTop="?attr/actionBarSize"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/list_item_summary" />

    </LinearLayout>


</LinearLayout>