<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/routine_card_style">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/card_padding">

        <ImageButton
            android:id="@+id/history_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/actionBarItemBackground"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/history_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/history_title"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/history_date"
            app:layout_constraintEnd_toStartOf="@id/history_delete_btn"
            app:layout_constraintStart_toStartOf="@id/history_data"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Routine" />

        <TextView
            android:id="@+id/history_date"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/header_exercise"
            app:layout_constraintStart_toStartOf="@id/history_data"
            tools:text="Sunday, January 24 2021, 9:32 a.m." />

        <TextView
            android:id="@+id/header_exercise"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/routine_editor_exercise_header"
            app:layout_constraintStart_toStartOf="@id/history_data"
            app:layout_constraintTop_toBottomOf="@id/history_date" />

        <TextView
            android:id="@+id/header_bpm"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50sp"
            android:paddingVertical="8dp"
            android:text="@string/bpm"
            app:layout_constraintEnd_toEndOf="@id/history_data"
            app:layout_constraintTop_toBottomOf="@id/history_date" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_exercise"
            tools:listitem="@layout/list_item_history_inner" />

        <TextView
            android:id="@+id/header_notes"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/notes"
            app:layout_constraintStart_toStartOf="@id/history_data"
            app:layout_constraintTop_toBottomOf="@id/history_data" />

        <TextView
            android:id="@+id/notes_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Test note text. Test note text. Test note text. Test note text. Test note text. Test note text. "
            app:layout_constraintEnd_toEndOf="@id/history_data"
            app:layout_constraintStart_toStartOf="@id/history_data"
            app:layout_constraintTop_toBottomOf="@id/header_notes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
