<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/routineListFragment">
    <fragment
        android:id="@+id/exerciseListFragment"
        android:name="com.nazmar.musicgym.exercises.list.ExerciseListFragment"
        android:label="@string/exercises"
        tools:layout="@layout/fragment_exercise_list">
        <action
            android:id="@+id/action_exercisesFragment_to_exercisesGraph"
            app:destination="@id/exercisesGraph" />
        <action
            android:id="@+id/action_exerciseListFragment_to_exercisesGraph"
            app:destination="@id/exercisesGraph" />
        <action
            android:id="@+id/action_exerciseListFragment_to_newExerciseDialogFragment"
            app:destination="@id/newExerciseDialogFragment" />
    </fragment>
    <fragment
        android:id="@+id/routineListFragment"
        android:name="com.nazmar.musicgym.routine.list.RoutineListFragment"
        android:label="@string/practice"
        tools:layout="@layout/fragment_routine_list">
        <action
            android:id="@+id/action_routineListFragment_to_restartSessionDialogFragment"
            app:destination="@id/restartSessionDialogFragment" />
        <action
            android:id="@+id/action_routineListFragment_to_routineEditorGraph"
            app:destination="@id/routineEditorGraph" />
        <action
            android:id="@+id/action_routineListFragment_to_sessionGraph"
            app:destination="@id/sessionGraph" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.nazmar.musicgym.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <navigation
        android:id="@+id/exercisesGraph"
        app:startDestination="@id/exerciseDetailFragment">
        <argument
            android:name="exerciseId"
            app:argType="long" />
        <fragment
            android:id="@+id/exerciseDetailFragment"
            android:name="com.nazmar.musicgym.exercises.detail.ExerciseDetailFragment"
            android:label="ExerciseDetailFragment"
            app:startDestination="@id/action_exerciseDetailFragment_to_deleteDialogFragment">
            <argument
                android:name="exerciseId"
                app:argType="long" />
            <action
                android:id="@+id/action_exerciseDetailFragment_to_renameDialogFragment"
                app:destination="@id/renameDialogFragment" />
            <action
                android:id="@+id/action_exerciseDetailFragment_to_deleteDialogFragment"
                app:destination="@id/deleteExerciseDialogFragment" />
        </fragment>
        <dialog
            android:id="@+id/renameDialogFragment"
            android:name="com.nazmar.musicgym.exercises.detail.RenameDialogFragment"
            android:label="RenameDialogFragment">
            <argument
                android:name="exerciseId"
                app:argType="long" />
        </dialog>
        <dialog
            android:id="@+id/deleteExerciseDialogFragment"
            android:name="com.nazmar.musicgym.exercises.detail.DeleteExerciseDialogFragment"
            android:label="DeleteExerciseDialogFragment">
            <argument
                android:name="exerciseId"
                app:argType="long" />
        </dialog>
    </navigation>
    <navigation
        android:id="@+id/routineEditorGraph"
        app:startDestination="@id/routineEditor">
        <argument
            android:name="routineId"
            app:argType="long" />
        <fragment
            android:id="@+id/routineEditor"
            android:name="com.nazmar.musicgym.routine.editor.RoutineEditorFragment"
            android:label="RoutineEditor">
            <argument
                android:name="routineId"
                app:argType="long" />
            <action
                android:id="@+id/action_routineEditor_to_durationPickerDialog"
                app:destination="@id/durationPickerDialog" />
            <action
                android:id="@+id/action_routineEditor_to_deleteRoutineDialogFragment"
                app:destination="@id/deleteRoutineDialogFragment" />
        </fragment>
        <dialog
            android:id="@+id/durationPickerDialog"
            android:name="com.nazmar.musicgym.routine.editor.DurationPickerDialogFragment"
            android:label="DurationPickerDialog">
            <argument
                android:name="exerciseIndex"
                app:argType="integer" />
            <argument
                android:name="routineId"
                app:argType="long" />
        </dialog>
        <dialog
            android:id="@+id/deleteRoutineDialogFragment"
            android:name="com.nazmar.musicgym.routine.editor.DeleteRoutineDialogFragment"
            android:label="DeleteRoutineDialogFragment">
            <argument
                android:name="routineId"
                app:argType="long" />
        </dialog>
    </navigation>
    <dialog
        android:id="@+id/newExerciseDialogFragment"
        android:name="com.nazmar.musicgym.exercises.list.NewExerciseDialogFragment"
        android:label="NewExerciseDialogFragment" />
    <navigation
        android:id="@+id/sessionGraph"
        app:startDestination="@id/sessionFragment">
        <argument
            android:name="routineId"
            app:argType="long" />
        <fragment
            android:id="@+id/sessionFragment"
            android:name="com.nazmar.musicgym.session.SessionFragment"
            android:label="SessionFragment">
            <argument
                android:name="routineId"
                app:argType="long" />
            <action
                android:id="@+id/action_sessionFragment_to_timerEditorDialogFragment"
                app:destination="@id/timerEditorDialog" />
        </fragment>
        <dialog
            android:id="@+id/timerEditorDialog"
            android:name="com.nazmar.musicgym.session.TimerEditorDialogFragment"
            android:label="TimerEditorDialogFragment">
            <argument
                android:name="routineId"
                app:argType="long" />
            <argument
                android:name="timeLeft"
                app:argType="long" />
        </dialog>
    </navigation>
    <dialog
        android:id="@+id/restartSessionDialogFragment"
        android:name="com.nazmar.musicgym.routine.list.RestartSessionDialogFragment"
        android:label="RestartSessionDialogFragment" >
        <argument
            android:name="routineId"
            app:argType="long" />
        <action
            android:id="@+id/action_restartSessionDialogFragment_to_sessionGraph"
            app:destination="@id/sessionGraph" />
    </dialog>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.nazmar.musicgym.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_historyFragment_to_deleteHistoryDialogFragment"
            app:destination="@id/deleteHistoryDialogFragment" />
    </fragment>
    <dialog
        android:id="@+id/deleteHistoryDialogFragment"
        android:name="com.nazmar.musicgym.history.DeleteHistoryDialogFragment"
        android:label="DeleteHistoryDialogFragment" />
</navigation>